--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'androidx.preference:preference-ktx:1.1.1'
+    implementation 'com.github.mejdi14:Flat-Dialog-Android:1.0.5'
+
+
 
 
 
